# fakerz

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Courses/: models.py  schema.py  views.py
fakerz/: settings.py
inbox/: models.py  schema.py  views.py
profiles/: schema.py  utils.py  validators.py  views.py
