[tool.poetry]
name = "fakerz"
version = "0.1.0"
description = "Fake API server"
authors = ["Mohamed Nesredin"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.2"
fastapi = "^0.52.0"
loguru = "^0.4.1"
python-decouple = "^3.3"
pendulum = "^2.0.5"
Faker = "^4.0.1"
httpx = "^0.11.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
pytest = "^5.3.5"
coverage = "^5.0.3"
isort = "^4.3.21"
mypy = "^0.761"
radon = "^4.1.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
safety = "^1.8.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
